--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/magazine-layout-v2/component/_magazine-select-popup.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/magazine-layout-v2/component/_magazine-select-popup.scss
@@ -191,11 +191,14 @@
   }
 }
 
-body.overlay-select {
-  .magv2-select-popup-container {
-    transition: transform 400ms cubic-bezier(0, 0, 0.2, 1), opacity 400ms cubic-bezier(0, 0, 0.2, 1);
-    transform: translateX(0) !important;
-    opacity: 1;
+html,
+body {
+  &.overlay-select {
+    .magv2-select-popup-container {
+      transition: transform 400ms cubic-bezier(0, 0, 0.2, 1), opacity 400ms cubic-bezier(0, 0, 0.2, 1);
+      transform: translateX(0) !important;
+      opacity: 1;
+    }
   }
 }
 
