--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/myaccount-reviews/component/_my-reviews.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/myaccount-reviews/component/_my-reviews.scss
@@ -98,6 +98,10 @@
   .user-reviews {
     display: flex;
 
+    @include breakpoint($only-mobile) {
+      flex-flow: row wrap;
+    }
+
     .user-desc {
       width: 66%;
 
