--- a/docroot/modules/custom/alshaya_acm_customer/templates/user-recent-order.html.twig
+++ b/docroot/modules/custom/alshaya_acm_customer/templates/user-recent-order.html.twig
@@ -87,10 +87,10 @@
       <td colspan="{{ order.bazaarvoice ? '5' : '4' }}" class="desktop-only">
         <a href="{{ path('alshaya_acm_customer.orders_detail', {'user': order.user_id, 'order_id': order.id}) }}">{{ 'View order details'| t }}</a>
       </td>
-      <td colspan="3" class="tablet-only">
+      <td colspan="{{ order.bazaarvoice ? '4' : '3' }}" class="tablet-only">
         <a href="{{ path('alshaya_acm_customer.orders_detail', {'user': order.user_id, 'order_id': order.id}) }}">{{ 'View order details'| t }}</a>
       </td>
-      <td colspan="3" class="mobile-only">
+      <td colspan="{{ order.bazaarvoice ? '4' : '3' }}" class="mobile-only">
         <a href="{{ path('alshaya_acm_customer.orders_detail', {'user': order.user_id, 'order_id': order.id}) }}">{{ 'View order details'| t }}</a>
       </td>
     </tr>
@@ -146,7 +146,7 @@
     </td>
 
     {% if item.bazaarvoice_link %}
-      <td class="above-mobile user-review">
+      <td class="above-mobile user-review bazaarvoice-enable">
         <div class="myaccount-write-review" data-sku={{ item.parent_sku }}></div>
       </td>
     {% endif %}
