[develop-bazaarvoice-phase2]CORE-31057:Theming My orders and recent order. -- photo upload

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/myaccount-reviews/component/_my-reviews.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/myaccount-reviews/component/_my-reviews.scss
@@ -78,23 +78,6 @@
     }
   }
 
-  .thumbnail-img-block {
-    display: flex;
-    overflow-y: auto;
-
-    @include breakpoint($tablet) {
-      position: relative;
-    }
-
-    .thumbnail-img {
-      @include bv-photo-upload-container ();
-
-      img {
-        @include bv-photo-upload-image ();
-      }
-    }
-  }
-
   .user-reviews {
     display: flex;
 
@@ -185,6 +168,27 @@
         width: 100%;
         margin: 0 0.5rem;
       }
+    }
+  }
+}
+
+.thumbnail-img-block {
+  display: flex;
+  overflow-y: auto;
+
+  @include breakpoint($only-mobile) {
+    margin-bottom: 1.25rem;
+  }
+
+  @include breakpoint($tablet) {
+    position: relative;
+  }
+
+  .thumbnail-img {
+    @include bv-photo-upload-container ();
+
+    img {
+      @include bv-photo-upload-image ();
     }
   }
 }
