--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/myaccount-reviews/component/_my-orders.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/myaccount-reviews/component/_my-orders.scss
@@ -52,6 +52,14 @@
       }
     }
   }
+
+  .order-item-row {
+    .product-image-block {
+      img {
+        width: auto;
+      }
+    }
+  }
 }
 
 .order-detail {
