CORE-31076: Updated attribute label and value markup and fixed font-weight for the selected value inside quick view drawer.

--- a/docroot/themes/custom/transac/alshaya_footlocker/conditional-sass/plp-add-to-cart/component/_product-drawer.scss
+++ b/docroot/themes/custom/transac/alshaya_footlocker/conditional-sass/plp-add-to-cart/component/_product-drawer.scss
@@ -24,5 +24,11 @@
     .has--special--price .price {
       color: $magv2-vat-text;
     }
+
+    .product-details-wrapper {
+      .size-guide-link {
+        font-size: 0.875rem;
+      }
+    }
   }
 }
