--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/plp-add-to-cart/component/_product-size.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/plp-add-to-cart/component/_product-size.scss
@@ -73,3 +73,12 @@
     }
   }
 }
+
+.form-list-wrapper,
+.attribute-wrapper {
+  .selected-text {
+    font-weight: bold;
+    display: inline-block;
+    color: $pdp_size_selected_text;
+  }
+}
