CORE-31079: Hide color swatch label and updated other attribute label font-size for HM quick view drawer.

--- a/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/plp-add-to-cart/component/_product-attribute.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/plp-add-to-cart/component/_product-attribute.scss
@@ -28,6 +28,18 @@
       margin-bottom: 0;
     }
   }
+
+  &.attribute-wrapper_article_castor_id {
+    label span:first-child {
+      display: none;
+    }
+
+    .selected-text {
+      font-family: $hnm-demibold;
+      font-size: 0.8125rem;
+      color: $hnm-black-three;
+    }
+  }
 }
 
 .form-list-wrapper,
@@ -41,5 +53,15 @@
         }
       }
     }
+  }
+
+  label {
+    font-size: 0.6875rem;
+  }
+
+  .selected-text {
+    font-weight: bold;
+    display: inline-block;
+    color: $pdp_size_selected_text;
   }
 }
