--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/bazaar-voice/component/_reviews-summary-pdp.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/bazaar-voice/component/_reviews-summary-pdp.scss
@@ -41,6 +41,30 @@
       @include breakpoint($only-mobile) {
         padding-top: 1.5rem;
       }
+
+      .review-syndicated {
+        display: flex;
+        background: $rr-review-comment-bg;
+        padding: 1rem;
+
+        &-source {
+          align-self: center;
+          padding-#{$left}: 1.125rem;
+        }
+
+        &-image {
+          height: 2.5rem;
+          align-self: center;
+
+          img {
+            height: 100%;
+            width: 100%;
+            object-position: center;
+            object-fit: contain;
+            zoom: 1;
+          }
+        }
+      }
     }
 
     &-tooltip {
