CORE-30857: Fixed grouped attribute styling.

--- a/docroot/themes/custom/transac/alshaya_footlocker/conditional-sass/plp-add-to-cart/component/_product-drawer.scss
+++ b/docroot/themes/custom/transac/alshaya_footlocker/conditional-sass/plp-add-to-cart/component/_product-drawer.scss
@@ -28,6 +28,10 @@
     .product-details-wrapper {
       .size-guide-link {
         font-size: 0.875rem;
+
+        @include breakpoint($desktop) {
+          top: 0;
+        }
       }
     }
   }
