--- a/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
@@ -1709,6 +1709,7 @@ $plp-quick-view-product-size-border-hover: $marine-blue;
 $plp-quick-view-product-size-active-bg: $marine-blue;
 $plp-quick-view-product-size-text-disabled: $marine-blue;
 $plp-quick-view-product-success: $_spc-radio-filled;
+$plp-quick-view-product-group-size-active: $primary_link-active;
 
 // Smart Agent colors.
 $smart-agent-banner-bg: $_smart_agent_banner;
