--- a/docroot/themes/custom/transac/alshaya_footlocker/conditional-sass/plp-add-to-cart/component/_product-size.scss
+++ b/docroot/themes/custom/transac/alshaya_footlocker/conditional-sass/plp-add-to-cart/component/_product-size.scss
@@ -5,6 +5,11 @@
         cursor: text;
         opacity: 0.3;
       }
+
+      &:not(.active):hover {
+        background: $pdp_thumbimage_hover_bg;
+        color: $plp-quick-view-product-size-text;
+      }
     }
   }
 
