--- a/docroot/themes/custom/transac/alshaya_victoria_secret/conditional-sass/plp-add-to-cart/component/_plp-add-to-cart.scss
+++ b/docroot/themes/custom/transac/alshaya_victoria_secret/conditional-sass/plp-add-to-cart/component/_plp-add-to-cart.scss
@@ -1,20 +1,5 @@
 .addtobag-button,
 .product-drawer-content-wrapper .config-form-addtobag-button {
-  font-family: $vs-bentonsanscomp-medium;
-  font-weight: 700;
-  letter-spacing: 0.15em;
-  text-transform: uppercase;
-
-  @include normal-arabic-letter-spacing;
-
-  @include breakpoint($desktop) {
-    font-size: 1.1875rem;
-
-    html[lang='ar'] & {
-      font-size: 1rem;
-    }
-  }
-
   &:hover {
     background: $plp-primary-cta-hover-bg;
   }
@@ -22,6 +7,7 @@
 
 .is-not-buyable,
 .addtobag-config-button,
-.addtobag-simple-button-container {
+.addtobag-button,
+.product-drawer-content-wrapper .config-form-addtobag-button {
   text-transform: uppercase;
 }
