CORE-30889: Adding width using calc for Muji PDP submit button.

--- a/docroot/themes/custom/transac/alshaya_muji/sass/components/products/_product-detail.scss
+++ b/docroot/themes/custom/transac/alshaya_muji/sass/components/products/_product-detail.scss
@@ -195,6 +195,10 @@
           font-family: $muji-bold;
           font-weight: 600;
 
+          @include breakpoint($only-mobile) {
+            width: calc(100% - 4.375rem - 0.5rem);
+          }
+
           &.fix-button {
             @include breakpoint($only-mobile) {
               position: fixed !important;
