CORE-30889: Adding width using calc for Muji PDP submit button.

--- a/docroot/themes/custom/transac/alshaya_muji/sass/components/products/_product-detail.scss
+++ b/docroot/themes/custom/transac/alshaya_muji/sass/components/products/_product-detail.scss
@@ -212,6 +212,10 @@
             margin-top: 0;
             float: none;
           }
+
+          @include breakpoint($only-tablet) {
+            margin-top: 0.5rem;
+          }
         }
 
         span {
