CORE-31049: Trending search list border fix on mobile.

--- a/docroot/themes/custom/transac/alshaya_the_body_shop/conditional-sass/algolia-search/component/_algolia-react-search-block.scss
+++ b/docroot/themes/custom/transac/alshaya_the_body_shop/conditional-sass/algolia-search/component/_algolia-react-search-block.scss
@@ -34,6 +34,10 @@
       &--open {
         border: 1px solid $algolia-trending-title-border;
         background-color: $algolia-search-bar-suggestion-background;
+
+        @include breakpoint($only-mobile) {
+          border: none;
+        }
       }
     }
   }
