CORE-30968: Updated primary CTA and quantity selector hover color for all brands on listing pages.

--- a/docroot/themes/custom/transac/alshaya_pottery_barn/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_pottery_barn/sass/config/_colors.scss
@@ -617,3 +617,6 @@ $spc-deliver-button: $_black_two;
 $spc-cnc-toggle-bg-active: $_black_two;
 $spc-checkout-cnc-map-expand: $_black_two;
 $spc-cart-free-gifts-link: $PB_grey_one;
+
+// PLP add to cart.
+$plp-primary-cta-hover-bg: $PB_black_one;
