--- a/docroot/themes/custom/transac/alshaya_westelm/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_westelm/sass/config/_colors.scss
@@ -644,3 +644,6 @@ $algolia-auto-complete-border: $WE_gray_five;
 $algolia-auto-complete-border-bottom: $WE_grey_four;
 $algolia-search-icon: $WE_grey_three;
 $algolia-search-clear-text-icon: $WE_grey_three;
+
+// PLP add to cart.
+$plp-primary-cta-hover-bg: $WE_black_one;
