--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/plp-add-to-cart/component/_plp-add-to-cart-qty.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/plp-add-to-cart/component/_plp-add-to-cart-qty.scss
@@ -60,6 +60,10 @@
       color: $primary_btn_text;
       font-weight: 600;
     }
+
+    &:hover {
+      background: $plp-primary-cta-hover-bg;
+    }
   }
 }
 
