--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/plp-add-to-cart/component/_plp-add-to-cart.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/plp-add-to-cart/component/_plp-add-to-cart.scss
@@ -76,3 +76,10 @@
 .is-not-buyable:hover {
   color: $primary_btn_bg;
 }
+
+.addtobag-button,
+.product-drawer-content-wrapper .config-form-addtobag-button {
+  &:hover {
+    background: $plp-primary-cta-hover-bg;
+  }
+}
