--- a/docroot/themes/custom/transac/alshaya_american_eagle/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_american_eagle/sass/config/_colors.scss
@@ -671,3 +671,6 @@ $rr-sort-filter-txt: $black;
 $rr-write-review-link-txt: $black;
 $rr-stars-color: $black;
 $rr-form-head-row-border: $black;
+
+// PLP add to cart.
+$plp-primary-cta-hover-bg: rgba(0, 0, 0, 0.8);
