--- a/docroot/themes/custom/transac/alshaya_bathbodyworks/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_bathbodyworks/sass/config/_colors.scss
@@ -25,6 +25,7 @@ $shadow: rgba(0, 0, 0, 0.24);
 $error-red: #c00;
 $cerulean-two: #ed088c;
 $icon-bg: rgba(242, 242, 242, 0.3);
+$_plp_cta_hover: #000;
 
 /* ------- 2. Primary Colors ------- */
 
@@ -635,3 +636,6 @@ $rr-review-comment-label: $warm-grey-one;
 $rr-write-review-link-txt: $black;
 $rr-stars-color: $peacock-blue;
 $rr-form-head-row-border: $peacock-blue;
+
+// PLP add to cart.
+$plp-primary-cta-hover-bg: $_plp_cta_hover;
