--- a/docroot/themes/custom/transac/alshaya_boots/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_boots/sass/config/_colors.scss
@@ -26,6 +26,7 @@ $warm-grey-three: #c2c2c2;
 $white-smoke-light: #f2f2f2;
 $white: #fff;
 $dark-sand: #ac8e54;
+$_plp_cta_hover: #0b3d6f;
 
 // Global elements.
 $primary_text: $black-two;
@@ -570,3 +571,6 @@ $rr-review-terms-condition: $drakish-blue;
 $rr-write-review-link-txt: $black-two;
 $rr-stars-color: $drakish-blue;
 $rr-form-head-row-border: $drakish-blue;
+
+// PLP add to cart.
+$plp-primary-cta-hover-bg: $_plp_cta_hover;
