--- a/docroot/themes/custom/transac/alshaya_footlocker/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_footlocker/sass/config/_colors.scss
@@ -603,3 +603,6 @@ $plp-quick-view-product-size-hover-bg: $pdp_thumbimage_hover_bg;
 $plp-quick-view-product-size-active-bg: $pdp_size_option_selected_bg;
 $plp-quick-view-product-size-text-disabled: $pdp_size_option_text;
 $plp-quick-view-product-group-size-active: $primary_link-active;
+
+// PLP add to cart.
+$plp-primary-cta-hover-bg: rgba(0, 0, 0, 0.8);
