--- a/docroot/themes/custom/transac/alshaya_hnm/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/sass/config/_colors.scss
@@ -778,3 +778,6 @@ $plp-quick-view-product-size-border-hover: $gray44;
 $plp-quick-view-product-size-hover-bg: $gray44;
 $plp-quick-view-product-size-active-bg: $primary_btn_bg;
 $plp-quick-view-product-size-text-disabled: $pdp_swatch_disabled;
+
+// PLP add to cart.
+$plp-primary-cta-hover-bg: $gray44;
