--- a/docroot/themes/custom/transac/alshaya_westelm/sass/components/header/_header-secondary-main-menu.scss
+++ b/docroot/themes/custom/transac/alshaya_westelm/sass/components/header/_header-secondary-main-menu.scss
@@ -6,8 +6,12 @@
           &.has-child {
             margin-right: 0.9375rem;
 
-            a.menu--one__link {
+            > .menu__link-wrapper {
               position: relative;
+            }
+
+            a.menu--one__link {
+              position: initial;
 
               &::after {
                 content: '';
@@ -19,7 +23,7 @@
                 margin-left: 0.5rem;
                 position: absolute;
                 right: -0.8rem;
-                top: 0.4rem;
+                top: 0.5rem;
               }
             }
           }
@@ -27,7 +31,7 @@
           &:hover {
             a.menu--one__link {
               &::after {
-                top: 0.4rem;
+                top: 0.25rem;
                 border-top: 0;
                 border-bottom: 0.25rem solid;
               }
