--- a/docroot/themes/custom/transac/alshaya_westelm/conditional-sass/algolia-search/component/_algolia-react-search-block.scss
+++ b/docroot/themes/custom/transac/alshaya_westelm/conditional-sass/algolia-search/component/_algolia-react-search-block.scss
@@ -12,6 +12,10 @@
 
   @include breakpoint($only-tablet) {
     bottom: -3.5rem;
+
+    html[lang=ar] & {
+      bottom: -2.5rem;
+    }
   }
 
   @include breakpoint($desktop) {
