--- a/docroot/modules/custom/alshaya_acm_product/templates/product-price-block.html.twig
+++ b/docroot/modules/custom/alshaya_acm_product/templates/product-price-block.html.twig
@@ -1,19 +1,84 @@
-{% if final_price %}
-  <div class="has--special--price">
-{% else %}
-  <div class="price">
-{% endif %}
-  {{ price }}
+<div class="price-type__wrapper">
+{# {% if final_price %} #}
+  <div class="has--special--price price">
+{# {% else %} #}
+  {# <div class="price"> #}
+{# {% endif %} #}
+  <span class="price-wrapper">
+    <div class="price">
+      {# {% if currency_code_position == 'before' %} #}
+        <span class="price-currency suffix before hidden">#entity.product.__self|currency_code#</span>
+      {# {% endif %} #}
+      <span class="price-amount">{{ price }}</span>
+      {# {% if currency_code_position != 'before' %} #}
+        <span class="price-currency suffix after hidden">#entity.product.__self|currency_code#</span>
+      {# {% endif %} #}
+
+      {# Following is @todo #}
+      {% if append_each_to_price %}
+        <span class="price-suffix-matchback hidden"> {% trans %}each{% endtrans %}</span>
+      {% endif %}
+    </div>
+  </span>
 </div>
 
 {% if final_price %}
   <div class="special--price">
-    {{ final_price }}
+    <span class="price-wrapper">
+      <div class="price">
+        {# {% if currency_code_position == 'before' %} #}
+          <span class="price-currency suffix before hidden">#entity.product.__self|currency_code#</span>
+        {# {% endif %} #}
+        <span class="price-amount">{{ final_price }}</span>
+        {# {% if currency_code_position != 'before' %} #}
+          <span class="price-currency suffix after hidden">#entity.product.__self|currency_code#</span>
+        {# {% endif %} #}
+        {# Following is @todo #}
+        {% if append_each_to_price %}
+          <span class="price-suffix-matchback hidden"> {% trans %}each{% endtrans %}</span>
+        {% endif %}
+      </div>
+    </span>
   </div>
-
-  {% if discount|render is not empty %}
-    <div class="price--discount">
-      ({{ discount }})
-    </div>
-  {% endif %}
+  {# Following is @todo #}
+  <div class="price--discount">
+    <span class="discount-prefix">{{ discount.prefix }}</span>
+    <span class="discount-value">{{ discount.value }}</span>
+  </div>
 {% endif %}
+
+{% if promotions is not empty %}
+  <div class="cart-promotions">
+      <div class="tooltip-wrap">
+        <div class="contains--tooltip">
+          <div class="tooltip--head">
+          </div>
+          <div class="tooltip">
+            <div class="applied-discounts-title">{{ 'Discount applied' | t }} </div>
+            {% for id, promotion in promotions %}
+              {% if promotion.label and promotion.description %}
+                <div class="promotion-{{ id }}">
+                  <div class="promotion-label">
+                    <strong>{{ promotion.label }}</strong>
+                  </div>
+                  <div class="promotion-description">
+                    {{ promotion.description.value }}
+                  </div>
+                </div>
+                <br>
+              {% endif %}
+            {% endfor %}
+          </div>
+        </div>
+      </div>
+  </div>
+{% endif %}
+
+{% if tooltip is not empty %}
+  <div class="tooltip-anchor info">
+    <div class="tooltip-box">
+      {{ tooltip }}
+    </div>
+  </div>
+{% endif %}
+</div>
