--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/magazine-layout-v2/component/_magazine-share-panel.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/magazine-layout-v2/component/_magazine-share-panel.scss
@@ -156,8 +156,10 @@
     font-family: $alshaya-bold;
     transition: all 0.3s ease-in-out;
 
-    @include breakpoint($desktop) {
-      height: 1.5rem;
+    html[lang=ar] & {
+      @include breakpoint($only-tablet) {
+        max-height: 2.25rem;
+      }
     }
 
     &:hover,
