Revert "Merge pull request #20785 from nikitaaswani/CORE-30874"
This reverts commit f04b65fcbeb59c89f30da05fc1ce41345da54413, reversing
changes made to 6fefda3f3acf44b36c312e0474cdc406bc93509f.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/magazine-layout-v2/component/_magazine-select-popup.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/magazine-layout-v2/component/_magazine-select-popup.scss
@@ -191,14 +191,11 @@
   }
 }
 
-html,
-body {
-  &.overlay-select {
-    .magv2-select-popup-container {
-      transition: transform 400ms cubic-bezier(0, 0, 0.2, 1), opacity 400ms cubic-bezier(0, 0, 0.2, 1);
-      transform: translateX(0) !important;
-      opacity: 1;
-    }
+body.overlay-select {
+  .magv2-select-popup-container {
+    transition: transform 400ms cubic-bezier(0, 0, 0.2, 1), opacity 400ms cubic-bezier(0, 0, 0.2, 1);
+    transform: translateX(0) !important;
+    opacity: 1;
   }
 }
 
