--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/magazine-layout-v2/component/_magazine-desc-popup.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/magazine-layout-v2/component/_magazine-desc-popup.scss
@@ -131,13 +131,10 @@
   }
 }
 
-html,
-body {
-  &.desc-overlay {
-    .magv2-desc-popup-container {
-      transition: transform 400ms cubic-bezier(0, 0, 0.2, 1), opacity 0ms cubic-bezier(0, 0, 0.2, 1);
-      transform: translateX(0) !important;
-      opacity: 1;
-    }
+body.desc-overlay {
+  .magv2-desc-popup-container {
+    transition: transform 400ms cubic-bezier(0, 0, 0.2, 1), opacity 0ms cubic-bezier(0, 0, 0.2, 1);
+    transform: translateX(0) !important;
+    opacity: 1;
   }
 }
