--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/magazine-layout-v2/component/_magazine-ratings-reviews.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/magazine-layout-v2/component/_magazine-ratings-reviews.scss
@@ -1,14 +1,11 @@
-html,
-body {
-  &.ratings-reviews-overlay {
-    .magv2-ratings-reviews-popup-container {
-      transition: transform 400ms cubic-bezier(0, 0, 0.2, 1), opacity 0ms cubic-bezier(0, 0, 0.2, 1);
-      transform: translateX(0) !important;
-      opacity: 1;
+body.ratings-reviews-overlay {
+  .magv2-ratings-reviews-popup-container {
+    transition: transform 400ms cubic-bezier(0, 0, 0.2, 1), opacity 0ms cubic-bezier(0, 0, 0.2, 1);
+    transform: translateX(0) !important;
+    opacity: 1;
 
-      @include breakpoint($only-mobile) {
-        width: 100%;
-      }
+    @include breakpoint($only-mobile) {
+      width: 100%;
     }
   }
 }
