--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/magazine-layout-v2/component/_magazine-pdp-header.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/magazine-layout-v2/component/_magazine-pdp-header.scss
@@ -31,6 +31,7 @@
 
   &.magv2-pdp-sticky-header {
     opacity: 1;
+    pointer-events: unset;
 
     @include breakpoint($only-mobile) {
       background: $magv2-sticky-header-bg;
@@ -43,6 +44,7 @@
 
   &.magv2-pdp-non-sticky-header {
     opacity: 0;
+    pointer-events: none;
 
     @include breakpoint($only-mobile) {
       transform: translateY(-100%);
