CORE-29842: Theming for Secondary Menu highlighting on desktop.

--- a/docroot/modules/custom/alshaya_secondary_main_menu/templates/alshaya-secondary-main-menu-highlights.html.twig
+++ b/docroot/modules/custom/alshaya_secondary_main_menu/templates/alshaya-secondary-main-menu-highlights.html.twig
@@ -13,12 +13,12 @@
         </div>
       </a>
       {% if data.highlight_paragraph.subtitle is not empty %}
-        <div class="subtitle_highlight">
+        <div class="highlights_subtitle">
           {{ data.highlight_paragraph.subtitle }}
         </div>
       {% endif %}
       {% if data.highlight_paragraph.title is not empty %}
-        <div class="title_highlight">
+        <div class="highlights_title">
           {{ data.highlight_paragraph.title }}
         </div>
       {% endif %}
