--- a/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
@@ -1719,3 +1719,4 @@ $hfd-menu-link-color: $grey-light;
 $hfd-menu-link-color-hover: $black;
 $hfd-menu-background: #f8f8f8;
 $hfd-promo-button-background: #e6e3de;
+$hfd-menu-heighlight-title: #010101;
