CORE-30985: Listing page filter theming fixes.

--- a/docroot/themes/custom/transac/alshaya_white_label/sass/components/facet/_filters.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/components/facet/_filters.scss
@@ -73,6 +73,10 @@
   margin-#{$left}: 0.5rem;
   position: relative;
 
+  &:first-child {
+    margin-#{$left}: 0;
+  }
+
   @include breakpoint($only-tablet) {
     margin: 0;
   }
