CORE-30494: Fixing the footer menu padding for sites hwich have a single column layout.

--- a/docroot/themes/custom/transac/alshaya_american_eagle/sass/components/footer/_footer-primary.scss
+++ b/docroot/themes/custom/transac/alshaya_american_eagle/sass/components/footer/_footer-primary.scss
@@ -90,7 +90,7 @@
   }
 
   .cols-6 & {
-    &:last-child {
+    &:last-child:not(:only-child) {
       @include breakpoint($desktop) {
         padding-#{$left}: 0;
       }
