--- a/docroot/themes/custom/transac/alshaya_hnm/sass/components/footer/_footer-primary.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/sass/components/footer/_footer-primary.scss
@@ -620,7 +620,7 @@
 
 .cols-6 {
   .c-footer-menu {
-    &:last-child {
+    &:last-child:not(:only-child) {
       @include breakpoint($desktop) {
         padding-#{$left}: 0;
       }
