--- a/docroot/themes/custom/transac/alshaya_muji/sass/components/footer/_footer-primary.scss
+++ b/docroot/themes/custom/transac/alshaya_muji/sass/components/footer/_footer-primary.scss
@@ -139,7 +139,7 @@
   }
 
   .cols-6 & {
-    &:last-child {
+    &:last-child:not(:only-child) {
       @include breakpoint($desktop) {
         padding-#{$left}: 0;
       }
