--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/plp-add-to-cart/component/_product-drawer.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/plp-add-to-cart/component/_product-drawer.scss
@@ -248,11 +248,37 @@
   }
 }
 
-html.overlay-product-modal,
-body.mobile--overlay {
-  .product-drawer-container {
-    transition: transform 400ms cubic-bezier(0, 0, 0.2, 1), opacity 0ms cubic-bezier(0, 0, 0.2, 1);
-    transform: translateX(0) !important;
-    opacity: 1;
+body {
+  &.overlay-product-modal {
+    overflow: hidden !important;
+
+    #configurable-drawer {
+      &::before {
+        opacity: 1;
+        height: 100%;
+        transition: opacity 300ms ease-in;
+      }
+    }
+
+    .product-drawer-container {
+      transition: transform 400ms cubic-bezier(0, 0, 0.2, 1), opacity 0ms cubic-bezier(0, 0, 0.2, 1);
+      transform: translateX(0) !important;
+      opacity: 1;
+    }
+  }
+}
+
+#configurable-drawer {
+  &::before {
+    content: '';
+    position: fixed;
+    width: 100vw;
+    background-color: rgba(0, 0, 0, 0.48);
+    box-shadow: 0 9999px 0 9999px rgba(0, 0, 0, 0.5);
+    z-index: 11;
+    opacity: 0;
+    top: 0;
+    left: 0;
+    transition: opacity 300ms ease-in;
   }
 }
