--- a/docroot/themes/custom/transac/alshaya_american_eagle/sass/components/products/_products-list.scss
+++ b/docroot/themes/custom/transac/alshaya_american_eagle/sass/components/products/_products-list.scss
@@ -138,6 +138,14 @@
         }
       }
     }
+
+    &.product-large {
+      .alshaya_search_gallery {
+        @include breakpoint($desktop) {
+          height: 25.5rem;
+        }
+      }
+    }
   }
 
   &.l-two--sf {
@@ -145,7 +153,7 @@
       &.product-small {
         .alshaya_search_gallery {
           @include breakpoint($desktop) {
-            height: 23.5rem;
+            height: 18.5rem;
           }
         }
       }
