--- a/docroot/themes/custom/transac/alshaya_the_body_shop/sass/components/social-links/_social-links.scss
+++ b/docroot/themes/custom/transac/alshaya_the_body_shop/sass/components/social-links/_social-links.scss
@@ -7,6 +7,12 @@
 
   ul {
     margin-#{$left}: -0.75rem;
+
+    @include breakpoint($only-tablet) {
+      html[lang=ar] & {
+        margin-right: -0.5rem;
+      }
+    }
   }
 }
 
