--- a/docroot/themes/custom/transac/alshaya_muji/sass/components/header/_header-primary.scss
+++ b/docroot/themes/custom/transac/alshaya_muji/sass/components/header/_header-primary.scss
@@ -1108,3 +1108,11 @@ header {
     }
   }
 }
+
+li.has-bg-color {
+  > .menu__in::after {
+    @include breakpoint($upto-desktop) {
+      #{$right}: 0.125rem;
+    }
+  }
+}
