CORE-29372: Fixing image boxes and alignments.

--- a/docroot/themes/custom/transac/alshaya_victoria_secret/sass/components/cloudzoom/_cloudzoom.scss
+++ b/docroot/themes/custom/transac/alshaya_victoria_secret/sass/components/cloudzoom/_cloudzoom.scss
@@ -39,7 +39,7 @@
 .cloudzoom {
   .cloudzoom__herocontainer {
     @include breakpoint($desktop) {
-      width: calc(100% - (6.375rem + 0.25rem));
+      width: calc(100% - 6.625rem);
     }
 
     .cloudzoom__image {
