--- a/docroot/themes/custom/transac/alshaya_white_label/sass/components/cloudzoom/_cloudzoom.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/components/cloudzoom/_cloudzoom.scss
@@ -47,7 +47,7 @@
     }
 
     @include breakpoint($desktop) {
-      width: calc(100% - (5.75rem + 1rem));
+      width: calc(100% - 6.75rem);
       float: $right;
       margin-bottom: 5rem;
     }
