CORE-30919: Added new class for sort by and category facet.

--- a/docroot/themes/custom/transac/alshaya_white_label/sass/components/facet/_filters.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/components/facet/_filters.scss
@@ -114,6 +114,14 @@
     display: none;
   }
 
+  &.hide-sort-by-block {
+    display: none;
+  }
+
+  &.hide-block-category-block {
+    display: none;
+  }
+
   &.block-facet-blockcategory-facet-plp:not(.algolia-plp-category-facet),
   &.block-facet-blockcategory-facet-promo {
     @include breakpoint($desktop) {
