--- a/docroot/themes/custom/transac/alshaya_white_label/sass/components/products/_products-list.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/components/products/_products-list.scss
@@ -18,6 +18,10 @@
     .c-accordion {
       display: table;
       width: 100%;
+
+      &.hide-block-category-block {
+        display: none;
+      }
     }
 
     @include breakpoint($desktop) {
