--- a/docroot/modules/custom/alshaya_rcs/templates/rcs-commerce-price.html.twig
+++ b/docroot/modules/custom/alshaya_rcs/templates/rcs-commerce-price.html.twig
@@ -1,82 +1,13 @@
-<div class="price-type__wrapper">
-{% if final_price %}
-  <div class="has--special--price price">
-{% else %}
-  <div class="price">
-{% endif %}
-  <span class="price-wrapper">
-    <div class="price">
-      {% if currency_code_position == 'before' %}
-        <span class="price-currency suffix">{{ currency_format }}</span>
-      {% endif %}
-      <span class="price-amount">#rcs.product._self|price#</span>
-      {% if currency_code_position != 'before' %}
-        <span class="price-currency suffix">{{ currency_format }}</span>
-      {% endif %}
-      {% if append_each_to_price %}
-        <span class="price-suffix-matchback hidden"> {% trans %}each{% endtrans %}</span>
-      {% endif %}
-    </div>
-  </span>
+<div class="price" data-decimal-points="{{ decimal_points }}">
+  {% if currency_code_position == 'before' %}
+    <span class="price-currency suffix">{{ currency_format }}</span>
+  {% endif %}
+  <span class="price-amount"><div class="replacement"></div></span>
+  {% if currency_code_position != 'before' %}
+    <span class="price-currency suffix">{{ currency_format }}</span>
+  {% endif %}
+  {% if append_each_to_price %}
+    <span class="price-suffix-matchback hidden"> {% trans %}each{% endtrans %}</span>
+  {% endif %}
 </div>
 
-{% if final_price %}
-  <div class="special--price">
-    <span class="price-wrapper">
-      <div class="price">
-        {% if currency_code_position == 'before' %}
-          <span class="price-currency suffix before hidden">#rcs.product._self|currency_code#</span>
-        {% endif %}
-        <span class="price-amount">#rcs.product._self|final_price#</span>
-        {% if currency_code_position != 'before' %}
-          <span class="price-currency suffix after hidden">#rcs.product._self|currency_code#</span>
-        {% endif %}
-        {# Following is @todo #}
-        {% if append_each_to_price %}
-          <span class="price-suffix-matchback hidden"> {% trans %}each{% endtrans %}</span>
-        {% endif %}
-      </div>
-    </span>
-  </div>
-  {# Following is @todo #}
-  <div class="price--discount">
-    <span class="discount-prefix">{{ discount.prefix }}</span>
-    <span class="discount-value">{{ discount.value }}</span>
-  </div>
-{% endif %}
-
-{% if promotions is not empty %}
-  <div class="cart-promotions">
-      <div class="tooltip-wrap">
-        <div class="contains--tooltip">
-          <div class="tooltip--head">
-          </div>
-          <div class="tooltip">
-            <div class="applied-discounts-title">{{ 'Discount applied' | t }} </div>
-            {% for id, promotion in promotions %}
-              {% if promotion.label and promotion.description %}
-                <div class="promotion-{{ id }}">
-                  <div class="promotion-label">
-                    <strong>{{ promotion.label }}</strong>
-                  </div>
-                  <div class="promotion-description">
-                    {{ promotion.description.value }}
-                  </div>
-                </div>
-                <br>
-              {% endif %}
-            {% endfor %}
-          </div>
-        </div>
-      </div>
-  </div>
-{% endif %}
-
-{% if tooltip is not empty %}
-  <div class="tooltip-anchor info">
-    <div class="tooltip-box">
-      {{ tooltip }}
-    </div>
-  </div>
-{% endif %}
-</div>
