--- a/docroot/modules/custom/alshaya_rcs/templates/rcs-price-block.html.twig
+++ b/docroot/modules/custom/alshaya_rcs/templates/rcs-price-block.html.twig
@@ -1,19 +1,6 @@
-{% if final_price %}
-  <div class="has--special--price">
-{% else %}
-  <div class="price">
-{% endif %}
-  {{ price }}
-</div>
+{# For when we have final price #}
+<div class="has--special--price"></div>
+<div class="special--price"></div>
+<div class="price--discount">({{'Save @discount%' | t}})</div>
 
-{% if final_price %}
-  <div class="special--price">
-    {{ final_price }}
-  </div>
-
-  {% if discount|render is not empty %}
-    <div class="price--discount">
-      ({{ discount }})
-    </div>
-  {% endif %}
-{% endif %}
+{# For when we do not have final price, we simply print the price template. #}
