[TBD]CORE-28813:The page alignment is broken on BOOTS

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/megamenu-inline-layout/component/_megamenu-inline-layout.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/megamenu-inline-layout/component/_megamenu-inline-layout.scss
@@ -214,6 +214,7 @@
               background: $mm_bg;
               height: 100%;
               z-index: 11;
+              width: auto;
             }
 
             &.active {
