--- a/docroot/themes/custom/transac/alshaya_american_eagle/templates/email/mimemail-message.html.twig
+++ b/docroot/themes/custom/transac/alshaya_american_eagle/templates/email/mimemail-message.html.twig
@@ -12,6 +12,7 @@
         #center {min-height: 200px; padding: 0 25px;}
         #header {border-bottom: 1px solid #ddd; padding: 25px 25px 40px 25px; margin-bottom: 23px;}
         .footer {margin-top: 50px;}
+        .footer p img { display: none;}
         u + #mimemail-body a {color: #888;}
         u + #mimemail-body .button {color: #fff !important;}
         #mimemail-body.ar {text-align: right;}
@@ -36,7 +37,7 @@
       <div style="padding-top: 30px; padding-bottom: 50px;">
         {% for name, link in links %}
           <a href="{{ link }}" target="_blank" style="text-decoration: none;">
-            <img style="margin: 0 0 0 15px;" src="{{ site_base_path ~ directory }}/imgs/icons/email-social-icons/{{ name }}-icon.png" alt="{{ name|t }}" width="24.3px" title="{{ name|t }}" />
+            <img style="margin: 0 0 0 15px;" src="{{ site_base_path ~ directory }}/imgs/icons/{{ name }}-icon.png" alt="{{ name|t }}" width="40px" title="{{ name|t }}" />
           </a>
         {% endfor %}
       </div>
