CORE-31071: Updated strings variable name as per PR feedback.

--- a/docroot/modules/custom/alshaya_acm_customer/templates/user-order-detail.html.twig
+++ b/docroot/modules/custom/alshaya_acm_customer/templates/user-order-detail.html.twig
@@ -22,8 +22,8 @@
 <div>
   <a href="{{ print_link }}" target="_blank" class="button-wide print--button">{{ "print"|t }}</a>
 </div>
-{% if strings %}
-  {{ strings }}
+{% if bazaarvoice_strings %}
+  {{ bazaarvoice_strings }}
 {% endif %}
 <div{{ attributes }}>
 
