--- a/docroot/modules/react/alshaya_bazaar_voice/templates/alshaya-bazaar-voice-strings.html.twig
+++ b/docroot/modules/react/alshaya_bazaar_voice/templates/alshaya-bazaar-voice-strings.html.twig
@@ -1,5 +1,5 @@
 <div class="bazaarvoice-strings">
-{% for string in strings %}
+{% for string in bazaarvoice_strings %}
   <input type="hidden" data-string-id="{{ string.key }}" value="{{ string.value }}" />
 {% endfor %}
 </div>
