--- a/docroot/themes/custom/transac/alshaya_white_label/templates/node/node--acq-product--full.html.twig
+++ b/docroot/themes/custom/transac/alshaya_white_label/templates/node/node--acq-product--full.html.twig
@@ -236,8 +236,8 @@ set classes = [
 <div id="dy-recommendation"></div>
 
 {% if content.reviews_section %}
-  {% if bazaar_voice_strings %}
-    {{ bazaar_voice_strings }}
+  {% if bazaarvoice_strings %}
+    {{ bazaarvoice_strings }}
   {% endif %}
   {{ content.reviews_section }}
 {% endif %}
