--- a/docroot/themes/custom/transac/alshaya_white_label/templates/node/node--acq-product--full-magazine-v2.html.twig
+++ b/docroot/themes/custom/transac/alshaya_white_label/templates/node/node--acq-product--full-magazine-v2.html.twig
@@ -1,4 +1,4 @@
 <div id="pdp-layout" {{ attributes }} {{ gtm_attributes }}></div>
-{% if bazaar_voice_strings %}
-  {{ bazaar_voice_strings }}
+{% if bazaarvoice_strings %}
+  {{ bazaarvoice_strings }}
 {% endif %}
