CORE-31246: Size overlay theming fixes on newpdp.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/magazine-layout-v2/component/_magazine-select-popup.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/magazine-layout-v2/component/_magazine-select-popup.scss
@@ -197,6 +197,33 @@ body.overlay-select {
     transform: translateX(0) !important;
     opacity: 1;
   }
+
+  .grouped-attr,
+  .non-grouped-attr {
+    &::before {
+      opacity: 1;
+      height: 100%;
+      transition: opacity 300ms ease-in;
+    }
+  }
+}
+
+.pdp-cart-form {
+  .grouped-attr,
+  .non-grouped-attr {
+    &::before {
+      content: '';
+      position: fixed;
+      width: 100vw;
+      background-color: rgba(0, 0, 0, 0.48);
+      box-shadow: 0 9999px 0 9999px rgba(0, 0, 0, 0.5);
+      z-index: 1;
+      opacity: 0;
+      top: 0;
+      #{$left}: 0;
+      transition: opacity 300ms ease-in;
+    }
+  }
 }
 
 .non-grouped-attr {
