CORE-31261: Icon fixes on AR mobile.

--- a/docroot/themes/custom/transac/alshaya_white_label/sass/components/header/_header-secondary_main_menu.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/components/header/_header-secondary_main_menu.scss
@@ -216,8 +216,8 @@
           border-right: 0.4rem solid transparent;
           border-top: 0.4rem solid;
           position: absolute;
-          right: 23px;
-          margin-top: 5px;
+          #{$right}: 1.4375rem;
+          margin-top: 0.3125rem;
           transform: rotate(180deg);
         }
 
