--- a/docroot/themes/custom/transac/alshaya_white_label/sass/components/menus/pramo/_menu-pramo-button.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/components/menus/pramo/_menu-pramo-button.scss
@@ -45,10 +45,15 @@
       content: '';
       width: 0.5rem;
       height: 1rem;
-      margin-left: 0.5rem;
+      margin-#{$left}: 0.5rem;
       position: absolute;
       background: url('#{$base_theme_img_directory_path}/icons/icon-chevron-next.svg') center no-repeat;
       background-size: 0.4rem;
+
+      html[lang=ar] & {
+        background: url('#{$base_theme_img_directory_path}/icons/icon-chevron-prev.svg') center no-repeat;
+        background-size: 0.4rem;
+      }
     }
   }
 
